kubernetes/apps/dev/argo-workflows/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
spec:
  hostnames: ["argo-workflows.toskbot.xyz"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: argo-workflows-server
          namespace: dev
          port: 2746
      matches:
        - path:
            type: PathPrefix
            value: /
