kubernetes/apps/dev/argo-workflows/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo-workflows.toskbot.xyz`)
      kind: Rule
      services:
        - name: argo-workflows-server
          port: 2746
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: argo-workflows.toskbot.xyz
